--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,25 @@
   <name>pastaeriso Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
+	<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
+	<dependency>
+		<groupId>org.mybatis</groupId>
+		<artifactId>mybatis</artifactId>
+		<version>3.5.5</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.webjars/bootstrap -->
+	<dependency>
+		<groupId>org.webjars</groupId>
+		<artifactId>bootstrap</artifactId>
+		<version>4.5.0</version>
+	</dependency>
+	<dependency>
+		<groupId>org.webjars</groupId>
+		<artifactId>jquery</artifactId>
+		<version>3.1.1</version>
+	</dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -17,5 +36,17 @@
   </dependencies>
   <build>
     <finalName>pastaeriso</finalName>
+	<plugins>
+		<plugin>
+			<groupId>org.apache.tomcat.maven</groupId>
+			<artifactId>tomcat7-maven-plugin</artifactId>
+			<version>2.2</version>
+			<configuration>
+				<url>http://192.168.0.130:8080/manager/text</url>
+				<server>TomcatServer</server>
+				<path>/pastaerisoteste</path>
+			</configuration>
+		</plugin>
+	</plugins>
   </build>
 </project>
