--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,5 +3,13 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
+	<display-name>Pasta e Riso</display-name>
+	<servlet>
+		<servlet-name>SelectPedidosServlet</servlet-name>
+		<servlet-class>br.com.pastaeriso.pedidos.SelectPedidosServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>SelectPedidosServlet</servlet-name>
+		<url-pattern>/SelectPedidosServlet</url-pattern>
+	</servlet-mapping>
 </web-app>
