--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,9 +1,11 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app 
+    xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
+    version="4.0">
 
-<web-app>
-	<display-name>Pasta e Riso</display-name>
+    <display-name>Pasta e Riso</display-name>
 	<servlet>
 		<servlet-name>SelectPedidosServlet</servlet-name>
 		<servlet-class>br.com.pastaeriso.pedidos.SelectPedidosServlet</servlet-class>
@@ -12,4 +14,5 @@
 		<servlet-name>SelectPedidosServlet</servlet-name>
 		<url-pattern>/SelectPedidosServlet</url-pattern>
 	</servlet-mapping>
+
 </web-app>
