--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <name>pastaeriso Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-	
+
 	<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
 	<dependency>
 		<groupId>org.mybatis</groupId>
@@ -56,12 +56,21 @@
 		<artifactId>javax.el-api</artifactId>
 		<version>3.0.1-b06</version>
 	</dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+  <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+<dependency>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-api</artifactId>
+    <version>5.7.0-M1</version>
+    <scope>test</scope>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
+<dependency>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-engine</artifactId>
+    <version>5.7.0-M1</version>
+    <scope>test</scope>
+</dependency>
+
 	<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-war-plugin -->
 	<dependency>
 		<groupId>org.apache.maven.plugins</groupId>
@@ -73,6 +82,11 @@
   <build>
     <finalName>pastaeriso</finalName>
 	<plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M5</version>
+        </plugin>
 		<plugin>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-compiler-plugin</artifactId>
