--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
 		<artifactId>postgresql</artifactId>
 		<version>42.2.14</version>
 	</dependency>
+  <dependency>
+		<groupId>org.postgresql</groupId>
+		<artifactId>postgresql</artifactId>
+		<version>42.2.14</version>
+    <scope>test</scope>
+	</dependency>
 	<dependency>
 		<groupId>javax.servlet</groupId>
 		<artifactId>javax.servlet-api</artifactId>
