--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,18 @@
 		<artifactId>javax.servlet.jsp.jstl-api</artifactId>
 		<version>1.2.2</version>
 	</dependency>
+  <!-- https://mvnrepository.com/artifact/org.glassfish.web/javax.servlet.jsp.jstl -->
+  <dependency>
+      <groupId>org.glassfish.web</groupId>
+      <artifactId>javax.servlet.jsp.jstl</artifactId>
+      <version>1.2.5</version>
+  </dependency>
+  <!-- https://mvnrepository.com/artifact/org.glassfish.web/javax.servlet.jsp.jstl -->
+  <dependency>
+      <groupId>org.glassfish.web</groupId>
+      <artifactId>javax.servlet.jsp.jstl</artifactId>
+      <version>1.2.5</version>
+  </dependency>
 
 	<!-- https://mvnrepository.com/artifact/org.webjars/bootstrap -->
 	<dependency>
