--- a/pom.xml
+++ b/pom.xml
@@ -11,82 +11,87 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
+  	<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
+  	<dependency>
+  		<groupId>org.mybatis</groupId>
+  		<artifactId>mybatis</artifactId>
+  		<version>3.5.5</version>
+  	</dependency>
+  	<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+  	<dependency>
+  		<groupId>org.postgresql</groupId>
+  		<artifactId>postgresql</artifactId>
+  		<version>42.2.14</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>javax.servlet</groupId>
+  		<artifactId>javax.servlet-api</artifactId>
+  		<version>4.0.1</version>
+  		<scope>provided</scope>
+  	</dependency>
+  	<!-- https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api -->
+  	<dependency>
+  		<groupId>javax.servlet.jsp.jstl</groupId>
+  		<artifactId>javax.servlet.jsp.jstl-api</artifactId>
+  		<version>1.2.2</version>
+  	</dependency>
+    <!-- https://mvnrepository.com/artifact/org.glassfish.web/javax.servlet.jsp.jstl -->
+    <dependency>
+        <groupId>org.glassfish.web</groupId>
+        <artifactId>javax.servlet.jsp.jstl</artifactId>
+        <version>1.2.5</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.glassfish.web/javax.servlet.jsp.jstl -->
+    <dependency>
+        <groupId>org.glassfish.web</groupId>
+        <artifactId>javax.servlet.jsp.jstl</artifactId>
+        <version>1.2.5</version>
+    </dependency>
 
-	<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
-	<dependency>
-		<groupId>org.mybatis</groupId>
-		<artifactId>mybatis</artifactId>
-		<version>3.5.5</version>
-	</dependency>
-	<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
-	<dependency>
-		<groupId>org.postgresql</groupId>
-		<artifactId>postgresql</artifactId>
-		<version>42.2.14</version>
-	</dependency>
-	<dependency>
-		<groupId>javax.servlet</groupId>
-		<artifactId>javax.servlet-api</artifactId>
-		<version>4.0.1</version>
-		<scope>provided</scope>
-	</dependency>
-	<!-- https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api -->
-	<dependency>
-		<groupId>javax.servlet.jsp.jstl</groupId>
-		<artifactId>javax.servlet.jsp.jstl-api</artifactId>
-		<version>1.2.2</version>
-	</dependency>
-  <!-- https://mvnrepository.com/artifact/org.glassfish.web/javax.servlet.jsp.jstl -->
+  	<!-- https://mvnrepository.com/artifact/org.webjars/bootstrap -->
+  	<dependency>
+  		<groupId>org.webjars</groupId>
+  		<artifactId>bootstrap</artifactId>
+  		<version>4.5.0</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.webjars</groupId>
+  		<artifactId>jquery</artifactId>
+  		<version>3.1.1</version>
+  	</dependency>
+  	<!-- https://mvnrepository.com/artifact/javax.el/javax.el-api -->
+  	<dependency>
+  		<groupId>javax.el</groupId>
+  		<artifactId>javax.el-api</artifactId>
+  		<version>3.0.1-b06</version>
+  	</dependency>
+    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
   <dependency>
-      <groupId>org.glassfish.web</groupId>
-      <artifactId>javax.servlet.jsp.jstl</artifactId>
-      <version>1.2.5</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.7.0-M1</version>
+      <scope>test</scope>
   </dependency>
-  <!-- https://mvnrepository.com/artifact/org.glassfish.web/javax.servlet.jsp.jstl -->
+  <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
   <dependency>
-      <groupId>org.glassfish.web</groupId>
-      <artifactId>javax.servlet.jsp.jstl</artifactId>
-      <version>1.2.5</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>5.7.0-M1</version>
+      <scope>test</scope>
   </dependency>
 
-	<!-- https://mvnrepository.com/artifact/org.webjars/bootstrap -->
-	<dependency>
-		<groupId>org.webjars</groupId>
-		<artifactId>bootstrap</artifactId>
-		<version>4.5.0</version>
-	</dependency>
-	<dependency>
-		<groupId>org.webjars</groupId>
-		<artifactId>jquery</artifactId>
-		<version>3.1.1</version>
-	</dependency>
-	<!-- https://mvnrepository.com/artifact/javax.el/javax.el-api -->
-	<dependency>
-		<groupId>javax.el</groupId>
-		<artifactId>javax.el-api</artifactId>
-		<version>3.0.1-b06</version>
-	</dependency>
-  <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
-<dependency>
-    <groupId>org.junit.jupiter</groupId>
-    <artifactId>junit-jupiter-api</artifactId>
-    <version>5.7.0-M1</version>
-    <scope>test</scope>
-</dependency>
-<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
-<dependency>
-    <groupId>org.junit.jupiter</groupId>
-    <artifactId>junit-jupiter-engine</artifactId>
-    <version>5.7.0-M1</version>
-    <scope>test</scope>
-</dependency>
+  	<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-war-plugin -->
+  	<dependency>
+  		<groupId>org.apache.maven.plugins</groupId>
+  		<artifactId>maven-war-plugin</artifactId>
+  		<version>3.3.1</version>
+  	</dependency>
 
-	<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-war-plugin -->
-	<dependency>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-war-plugin</artifactId>
-		<version>3.3.1</version>
-	</dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.6</version>
+    </dependency>
 
   </dependencies>
   <build>
@@ -106,6 +111,11 @@
 				<target>1.8</target>
 			</configuration>
 		</plugin>
+    <plugin>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-maven-plugin</artifactId>
+        <version>9.4.30.v20200611</version>
+    </plugin>
 		<plugin>
 			<groupId>org.apache.tomcat.maven</groupId>
 			<artifactId>tomcat7-maven-plugin</artifactId>
@@ -115,16 +125,6 @@
 				<server>TomcatServer</server>
 			</configuration>
 			<executions>
-				<execution>
-					<id>desenovlimento-deploy</id>
-					<phase>pre-integration-test</phase>
-					<configuration>
-						<path>/emdesenvolvimento</path>
-					</configuration>
-					<goals>
-						<goal>redeploy-only</goal>
-					</goals>
-				</execution>
 				<execution>
 					<id>final_deploy</id>
 					<phase>install</phase>
