--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,18 @@
       <version>2.8.6</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.13.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.13.3</version>
+    </dependency>
+
+
   </dependencies>
   <build>
     <finalName>pastaeriso</finalName>
