--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
   <groupId>br.com.pastaeriso</groupId>
   <artifactId>pastaeriso</artifactId>
   <packaging>war</packaging>
-  <version>1.0</version>
-  <name>pastaeriso Maven Webapp</name>
-  <url>http://maven.apache.org</url>
+  <version>1.1.1</version>
+  <name>pastaeriso</name>
+  <url>https://github.com/lucasgueiros/pastaeriso</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -101,7 +101,7 @@
 
   </dependencies>
   <build>
-    <finalName>pastaeriso</finalName>
+    <finalName>${project.artifactId}-${project.version}</finalName>
 	<plugins>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
