--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>br.com.pastaeriso</groupId>
   <artifactId>pastaeriso</artifactId>
   <packaging>war</packaging>
-  <version>1.1.2</version>
+  <version>1.2.0</version>
   <name>pastaeriso</name>
   <url>https://github.com/lucasgueiros/pastaeriso</url>
   <properties>
@@ -96,6 +96,12 @@
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
       <version>2.13.3</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis-migrations -->
+    <dependency>
+        <groupId>org.mybatis</groupId>
+        <artifactId>mybatis-migrations</artifactId>
+        <version>3.3.7</version>
     </dependency>
 
 
