--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,22 @@
   </dependencies>
   <build>
     <finalName>${project.artifactId}-${project.version}</finalName>
-	<plugins>
+	   <plugins>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>exec-maven-plugin</artifactId>
+          <version>1.2.1</version>
+          <executions>
+            <execution>
+              <goals>
+                <goal>java</goal>
+              </goals>
+            </execution>
+          </executions>
+          <configuration>
+            <mainClass>br.com.pastaeriso.MainClass</mainClass>
+          </configuration>
+        </plugin>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
